tests/unterminated_expression4.c.t.exp
unterminated_expression4.c.t:1:23: error: Unterminated {{

{{ 10 }} And another {{
                       ^

